feat: Rename project and update logo paths
Rename the project to `uragawalp` and update the logo image paths to remove unnecessary version parameters. This also involves removing unused code related to address fetching in the ContactForm.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "architectural-documentary-lp",
+  "name": "uragawalp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
